
syntax = "proto3";

package descarteslabs.workflows;

import "descarteslabs/common/proto/types/types.proto";
import "descarteslabs/common/proto/typespec/typespec.proto";
// backwards compatible fix for ErrorCode
import public "descarteslabs/common/proto/errors/errors.proto";

service JobAPI {
  rpc CreateJob(CreateJobRequest) returns (Job) {}
  rpc ListJobs(ListJobsRequest) returns (stream Job) {}
  rpc GetJob(GetJobRequest) returns (Job) {}
  rpc CancelJob(CancelJobRequest) returns (Job) {}
  rpc WatchJob(WatchJobRequest) returns (stream Job.State) {}
}

message Job {
  string id = 1;
  string serialized_graft = 2;
  Typespec typespec = 3;
  string parameters = 4;
  bool no_cache = 5;
  string channel = 6;
  int64 timestamp = 7;
  string user = 8;
  string org = 9;

  enum Stage {
    QUEUED = 0;
    PREPARING = 1;
    RUNNING = 2;
    SAVING = 3;
    FAILED = 4;
    SUCCEEDED = 5;
    CANCELLED = 6;
  }

  message TasksProgress {
    uint32 waiting = 1;
    uint32 ready = 2;
    uint32 running = 3;
    uint32 finished = 4;
  }

  message Error {
    ErrorCode code = 1;
    string message = 2;
  }

  message State {
    Stage stage = 1;
    TasksProgress tasks_progress = 2;
    Error error = 3;
    int64 timestamp = 4;
  }

  State state = 10;
  ResultType type = 11;
}

message CreateJobRequest {
  string serialized_graft = 1;
  Typespec typespec = 2;
  string parameters = 3;
  bool no_cache = 4;
  string channel = 5;
  ResultType type = 6;
}

message GetJobRequest { string id = 1; }

message CancelJobRequest { string id = 1; }

message WatchJobRequest { string id = 1; }

message ListJobsRequest {
  string start_datetime = 1;
  string end_datetime = 2;
}
